--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta charset="UTF--8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Numerology Horoscope AI</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        body {
-            background-color: #0f172a;
-        }
-    </style>
 <script type="importmap">
 {
   "imports": {
@@ -21,7 +15,7 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="/src/index.css">
 </head>
 <body>
     <div id="root"></div>
